--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <user-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="flutter_coffee_menu"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:userCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
